# rua

./: .gitignore  .gitmodules  CMakeLists.txt  clang_format.sh
arduino/eeprom_tool/: eeprom_tool.ino
common/: CMakeLists.txt
common/src/: control_signals.cpp  control_signals.h
common/tests/: CMakeLists.txt
common/tests/test_common/: test_control_signals.cpp
dep/: CMakeLists.txt
doc/: notepad++_microcode_language.xml  opcodes.txt
emulator/: CMakeLists.txt
emulator/src/: bus.cpp  bus.h  cpu.cpp  cpu.h  ibus_transceiver.h  main.cpp  module.h  simulated_alu.cpp  simulated_alu.h  simulated_register8.cpp  simulated_register8.h
hardware/: opcodes.txt
hardware/microcode/: definitions.txt  microcode.txt
mcasm/: CMakeLists.txt
mcasm/src/: assembler.cpp  assembler.h  header.cpp  header.h  main.cpp
microcode/: fetch.inc  init.txt  microcode.txt  mov_imm8.inc  mov_regm.inc  signals.txt
microcode/macros/: fetch.txt
rasm/: CMakeLists.txt
rasm/src/: main.cpp
